--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.6.0",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
